Realizo algunas refactorizaciones por claridad.